@@ -151,6 +151,7 @@ where XXXXXX is the bug number as listed below.
         and FUTEX_WAKE_BITSET, check only 4 args for FUTEX_WAKE_BITSET,
         and 2 args for FUTEX_TRYLOCK_PI
 377717  Fix massive space leak when reading compressed debuginfo sections
+377930  fcntl syscall wrapper is missing flock structure check
 
 Release 3.12.0 (20 October 2016)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
